<!--
  ~ Copyright (c) 2022.  Bambora ( https://bambora.com/ )
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<resources>
    <string name="app_name">Bambora Checkout SDK</string>
    <!-- Overview Fragment -->
    <string name="app_name_android">Bambora Checkout Android</string>
    <string name="open_checkout">Open Checkout</string>
    <string name="session_id_hint">Session ID</string>
    <string name="session_id_error">Session ID cannot be empty</string>
    <string name="checkbox_custom_url_text">Use custom URL</string>
    <string name="custom_url_hint">Custom URL</string>
    <string name="custom_url_empty_error">Custom URL cannot be empty</string>
    <string name="custom_url_invalid_error">Custom URL is not a valid URL</string>
    <!-- Session Fragment -->
    <string name="worldline_logo_description">The Worldline logo</string>
    <string name="payment_authorized_header">The payment was authorized</string>
    <string name="transaction_id_title">Transaction ID:</string>
    <string name="order_id_title">Order ID:</string>
    <string name="reference_title">Reference:</string>
    <string name="amount_title">Amount:</string>
    <string name="currency_title">Currency:</string>
    <string name="date_title">Date:</string>
    <string name="time_title">Time:</string>
    <string name="fee_id_title">Fee ID:</string>
    <string name="transaction_fee_title">Transaction Fee:</string>
    <string name="payment_type_id_title">Payment Type ID:</string>
    <string name="wallet_title">Wallet name:</string>
    <string name="card_number_title">Card Number:</string>
    <string name="expire_month_title">Expire Month:</string>
    <string name="expire_year_title">Expire Year:</string>
    <string name="subscription_id_title">Subscription ID:</string>
    <string name="token_id_title">Token ID:</string>
    <string name="eci_title">ECI:</string>
    <string name="issuer_country_title">Issuer Country:</string>
    <string name="hash_title">Hash:</string>
    <string name="additional_field_placeholder">Additional Field:</string>
    <string name="additional_field_title">%s:</string>
    <string name="unknown_value">Unknown</string>
    <string name="button_new_session">Initiate new session</string>
</resources>
