<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022.  Bambora ( https://bambora.com/ )
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SessionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/worldline_logo_image_view"
            android:layout_width="@dimen/width_0"
            android:layout_height="wrap_content"
            android:src="@drawable/worldline_logo"
            android:contentDescription="@string/worldline_logo_description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/title_text_view"
            app:layout_constraintStart_toStartOf="@id/title_text_view" />

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:text="@string/app_name_android"
            android:textColor="@color/yellow"
            android:textSize="@dimen/text_size_25"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/worldline_logo_image_view"
            app:layout_constraintBottom_toTopOf="@id/session_id_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/session_id_layout"
            style="@style/input_layout"
            android:layout_width="@dimen/width_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_text_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/session_id_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple"
                android:hint="@string/session_id_hint"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/custom_url_layout"
            style="@style/input_layout"
            android:layout_width="@dimen/width_0"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/margin_16"
            app:layout_constraintStart_toStartOf="@id/session_id_layout"
            app:layout_constraintEnd_toEndOf="@id/session_id_layout"
            app:layout_constraintTop_toBottomOf="@id/session_id_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/custom_url_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple"
                android:hint="@string/custom_url_hint"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/open_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:backgroundTint="@color/light_purple"
            android:padding="@dimen/margin_16"
            android:text="@string/open_checkout"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/custom_url_layout" />

        <CheckBox
            android:id="@+id/checkbox_custom_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_custom_url_text"
            android:textColor="@color/gray"
            android:buttonTint="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/open_checkout"
            app:layout_constraintEnd_toEndOf="@id/open_checkout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>